--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,42 +1,42 @@
 <footer class="container">
     <div class="site-footer">
         <div class="site-footer-icons">
-            <a target="_blank" href="https://www.zhihu.com/">
-               知乎
-            </a>
-            <a target="_blank" href="http://weibo.com/">
-               微博
-            </a>
-            <a target="_blank" href="https://github.com/">
+<!--            <a target="_blank" href="https://www.zhihu.com/">-->
+<!--               知乎-->
+<!--            </a>-->
+<!--            <a target="_blank" href="http://weibo.com/">-->
+<!--               微博-->
+<!--            </a>-->
+            <a target="_blank" href="https://github.com/neulionweb/neulionweb.github.io">
                 GitHub
             </a>
         </div>
         <div class="card text-center">
             <ul class="list-inline" style="margin-left: 0;">
                <li>
-                <a target="_blank" href="https://github.com/">
+                <a target="_blank" href="https://github.com/neulionweb/neulionweb.github.io">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                     </span>
                 </a>
               </li>
-              <li>
-                <a target="_blank" href="https://www.zhihu.com/">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa  fa-stack-1x fa-inverse">知</i>
-                  </span>
-                </a>
-              </li>
-              <li>
-                <a target="_blank" href="https://weibo.com/">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
+<!--              <li>-->
+<!--                <a target="_blank" href="https://www.zhihu.com/">-->
+<!--                  <span class="fa-stack fa-lg">-->
+<!--                    <i class="fa fa-circle fa-stack-2x"></i>-->
+<!--                    <i class="fa  fa-stack-1x fa-inverse">知</i>-->
+<!--                  </span>-->
+<!--                </a>-->
+<!--              </li>-->
+<!--              <li>-->
+<!--                <a target="_blank" href="https://weibo.com/">-->
+<!--                  <span class="fa-stack fa-lg">-->
+<!--                    <i class="fa fa-circle fa-stack-2x"></i>-->
+<!--                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>-->
+<!--                  </span>-->
+<!--                </a>-->
+<!--              </li>-->
             </ul>
         </div>
         <div class="site-footer-links mobile-hidden">
