--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,29 +1,29 @@
 <div class="card text-center">
     <ul class="list-inline" style="margin-left: 0;">
      <li>
-        <a target="_blank" href="https://github.com/">
+        <a target="_blank" href="https://github.com/neulionweb/neulionweb.github.io">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-github fa-stack-1x fa-inverse"></i>
           </span>
         </a>
       </li>
-      <li>
-        <a target="_blank" href="https://www.zhihu.com/">
-          <span class="fa-stack fa-lg">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa  fa-stack-1x fa-inverse">知</i>
-          </span>
-        </a>
-      </li>
-       <li>
-        <a target="_blank" href="https://weibo.com/">
-          <span class="fa-stack fa-lg">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
-          </span>
-        </a>
-      </li>
+<!--      <li>-->
+<!--        <a target="_blank" href="https://www.zhihu.com/">-->
+<!--          <span class="fa-stack fa-lg">-->
+<!--            <i class="fa fa-circle fa-stack-2x"></i>-->
+<!--            <i class="fa  fa-stack-1x fa-inverse">知</i>-->
+<!--          </span>-->
+<!--        </a>-->
+<!--      </li>-->
+<!--       <li>-->
+<!--        <a target="_blank" href="https://weibo.com/">-->
+<!--          <span class="fa-stack fa-lg">-->
+<!--            <i class="fa fa-circle fa-stack-2x"></i>-->
+<!--            <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>-->
+<!--          </span>-->
+<!--        </a>-->
+<!--      </li>-->
   </ul>
 </div>
 <h3 class="sidebar-title">精选文章</h3>
