fix: header scroll issue

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,4 +60,5 @@
     <!-- Third-Party JS -->
     <script type="text/javascript" src="{{ site.cdn_prefix }}bower_components/geopattern/js/geopattern.min.js"></script>
     <!-- My JS -->
+		<script type="text/javascript" src="{{ site.cdn_prefix }}assets/js/script.js"></script>
 </footer>
