fix: gitalk comment doesn't work

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -84,14 +84,13 @@
         <script src="/assets/js/gitalk.min.js"></script>
         <script>
         var gitalk = new Gitalk({
-            id: '{{ page.url }}',
             clientID: '{{ site.gitalk.clientID }}',
             clientSecret: '{{ site.gitalk.clientSecret }}',
             repo: '{{ site.gitalk.repo }}',
             owner: '{{ site.gitalk.owner }}',
-            admin: ['{{ site.gitalk.owner }}'],
-            labels: ['gitment'],
-            perPage: 50,
+            admin: '{{ site.gitalk.admin }}',
+            id: '{{ page.url }}',
+            distractionFreeMode: true
         })
         gitalk.render('gitalk-container')
         </script>
