fix: gitalk comment doesn't work

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -4,7 +4,7 @@
          <img src="{{ site.cdn_prefix }}assets/images/{{ page.copyright }}.jpg" >
         {% endif %}
    </p>
-   <p align="center" style="margin-top: 100px; font-size: 12px;color: #cc0000;">
+   <p align="center" style="margin-top: 100px; font-size: 14px;color: #337ab7;">
        <strong>（转载本站文章请注明作者和出处 <a href="{{site.url}}">NeuLion Web</a>）</strong>
    </p>
 <!--   <p align="center" style="margin-top: 15px; font-size: 16px;color: #337ab7;">-->
