fix: gitalk comment doesn't work

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -90,7 +90,7 @@
             owner: '{{ site.gitalk.owner }}',
             admin: '{{ site.gitalk.admin }}',
             id: '{{ page.url }}',
-            distractionFreeMode: true
+            distractionFreeMode: false
         })
         gitalk.render('gitalk-container')
         </script>
