fix: gitalk comment doesn't work

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -88,7 +88,7 @@
             clientSecret: '{{ site.gitalk.clientSecret }}',
             repo: '{{ site.gitalk.repo }}',
             owner: '{{ site.gitalk.owner }}',
-            admin: '{{ site.gitalk.admin }}',
+            admin: ['{{ site.gitalk.admin }}'],
             id: '{{ page.url }}',
             distractionFreeMode: false
         })
