--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{{ site.cdn_prefix }}bower_components/hover/css/hover-min.css">
     <link rel="stylesheet" href="{{ site.cdn_prefix }}bower_components/primer-markdown/dist/user-content.min.css">
     <link rel="stylesheet" href="{{ site.cdn_prefix }}assets/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.cdn_prefix }}assets/css/gitalk.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 
     
 
